Git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,28 @@
 .idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_1_3_61_jar.xml
 .idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_common_1_3_61_jar.xml
 .idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jdk7_1_3_61_jar.xml
+.idea/.name
+.idea/libraries/Gradle__androidx_recyclerview_recyclerview_1_1_0_aar.xml
+.idea/libraries/Gradle__com_google_code_gson_gson_2_8_2_jar.xml
+.idea/libraries/Gradle__com_google_dagger_dagger_2_16_jar.xml
+.idea/libraries/Gradle__com_google_dagger_dagger_android_2_16_aar.xml
+.idea/libraries/Gradle__com_google_dagger_dagger_android_support_2_16_aar.xml
+.idea/libraries/Gradle__com_squareup_okhttp3_logging_interceptor_3_11_0_jar.xml
+.idea/libraries/Gradle__com_squareup_okhttp3_okhttp_3_11_0_jar.xml
+.idea/libraries/Gradle__com_squareup_okio_okio_1_14_0_jar.xml
+.idea/libraries/Gradle__com_squareup_retrofit2_adapter_rxjava2_2_4_0_jar.xml
+.idea/libraries/Gradle__com_squareup_retrofit2_converter_gson_2_4_0_jar.xml
+.idea/libraries/Gradle__com_squareup_retrofit2_retrofit_2_4_0_jar.xml
+.idea/libraries/Gradle__io_reactivex_rxjava2_rxandroid_2_1_0_aar.xml
+.idea/libraries/Gradle__io_reactivex_rxjava2_rxjava_2_2_2_jar.xml
+.idea/libraries/Gradle__io_reactivex_rxjava2_rxkotlin_2_3_0_jar.xml
+.idea/libraries/Gradle__net_bytebuddy_byte_buddy_1_9_3_jar.xml
+.idea/libraries/Gradle__net_bytebuddy_byte_buddy_agent_1_9_3_jar.xml
+.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_android_extensions_runtime_1_3_21_jar.xml
+.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_1_3_21_jar.xml
+.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_common_1_3_21_jar.xml
+.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jdk7_1_3_21_jar.xml
+.idea/libraries/Gradle__org_mockito_mockito_core_2_23_4_jar.xml
+.idea/libraries/Gradle__org_mockito_mockito_inline_2_22_0_jar.xml
+.idea/libraries/Gradle__org_objenesis_objenesis_2_6_jar.xml
+.idea/libraries/Gradle__org_reactivestreams_reactive_streams_1_0_2_jar.xml
