In progress with architecture

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@
 .idea/libraries/Gradle__org_mockito_mockito_inline_2_22_0_jar.xml
 .idea/libraries/Gradle__org_objenesis_objenesis_2_6_jar.xml
 .idea/libraries/Gradle__org_reactivestreams_reactive_streams_1_0_2_jar.xml
+.gradle/5.4.1/fileHashes/resourceHashesCache.bin
+.gradle/5.4.1/javaCompile/classAnalysis.bin
+.gradle/5.4.1/javaCompile/jarAnalysis.bin
+.gradle/5.4.1/javaCompile/javaCompile.lock
+.gradle/5.4.1/javaCompile/taskHistory.bin
